--- a/.env.development
+++ b/.env.development
@@ -8,4 +8,5 @@ export DB_PASSWORD=
 export RAILS_PORT=3000
 export WEB_CONCURRENCY=1
 export MAX_THREADS=1
-
+export BCC_EMAIL=yancarlosmarinosorio@gmail.com
+export SMTP=
