--- a/.env.development
+++ b/.env.development
@@ -9,4 +9,4 @@ export RAILS_PORT=3000
 export WEB_CONCURRENCY=1
 export MAX_THREADS=1
 export BCC_EMAIL=yancarlosmarinosorio@gmail.com
-export SMTP=
+export EMAIL_USER=noreply@stcarga.com.co
