added figaro for env

--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,7 @@ export WEB_CONCURRENCY=1
 export MAX_THREADS=1
 export BCC_EMAIL=yancarlosmarinosorio@gmail.com
 export EMAIL_USER=noreply@stcarga.com.co
+export APP_DOMAIN=localhost:3000/
+export EMAIL_PASSWORD=fakepassword
+export EMAIL_SMTP=fake.smtp
+export EMAIL_SMTP_PORT=0121
